# player

./: README.md
aplayer/: CMakeLists.txt
aplayer/header/: audio_player.hpp  backend.hpp  command.hpp  extras.h  media.hpp  net.hpp  painteditem.hpp  video_player.hpp
aplayer/layout/: Drawer_h.qml  Icon_.qml  Main.qml  MediaList.qml  MediaPlayer_use_case.qml  MouseArea_.qml  MouseArea_resize.qml  Painter.qml  Popup_.qml  Rectangle_.qml  ServerAddress.qml  Text_vcenter.qml  ToolBar.qml
aplayer/source/: main.cpp
aplayer/values/: Speed.qml
server/: CMakeLists.txt  Command.cpp  media.db
server/header/: audio_player.hpp  command.hpp  extras.h  http.hpp  instance.hpp  media.hpp  overrides.h  packet.h  session.hpp  sql.hpp  tcp_server.hpp  udp_socket.hpp  video_player.hpp
server/source/: main.cpp
